--- a/html/package.json
+++ b/html/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design-vue": "^1.6.4",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
